app/src/main/java/com/example/darkfox/trainingnotes/dto/errors/FirestoreExceptionGettingAccountDoc.kt
package com.example.darkfox.trainingnotes.dto.errors

class FirestoreExceptionGettingAccountDoc(val failCause:String) : Exception(failCause) {
}